<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/custonBGColor">

    <Button
        android:id="@+id/btnSearchLocation"
        android:layout_width="377dp"
        android:layout_height="45dp"
        android:text="@string/location"
        android:textColor="?attr/custonPrimaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changes"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/btnTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTemp"
        android:textColor="?attr/custonPrimaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearchLocation"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/btnContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnContact"
        android:textColor="?attr/custonPrimaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTemp"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/btnEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEmer"
        android:textColor="?attr/custonPrimaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContact"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="179dp"
        android:layout_height="29dp"
        android:includeFontPadding="false"
        android:padding="5dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textColor="?attr/custonPrimaryTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <TextView
        android:id="@+id/changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/changes"
        android:textColor="?attr/custonPrimaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <Button
        android:id="@+id/linkMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkMain"
        android:textColor="?attr/custonPrimaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEmergency"
        app:layout_constraintVertical_bias="0.69" />

    <Switch
        android:id="@+id/dMSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchDarkMode"
        android:textColor="?attr/custonPrimaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openRegis"
        android:text="@string/btnRegis"
        app:layout_constraintBottom_toTopOf="@+id/linkMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEmergency" />

</androidx.constraintlayout.widget.ConstraintLayout>